unpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Delegated_Admin_Name__c</fullName>
        <formula>Partner_Community_Delegated_Admin__r.FirstName  &amp;&apos; &apos;&amp; Partner_Community_Delegated_Admin__r.MiddleName &amp;&apos; &apos;&amp; Partner_Community_Delegated_Admin__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delegated Admin Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Community_Delegated_Admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Community Delegated Admin</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only Contacts that are related to this Account can be selected</errorMessage>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Partner Community Delegated Admin)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Partner_Delegated_Admin__c</fullName>
        <label>Previous Partner Delegated Admin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>Lock_Account_Name</fullName>
        <active>true</active>
        <description>Is used to prevent the edit of the Account Name by the Community Delegated Admin</description>
        <errorConditionFormula>$Profile.Name = &quot;Eurofiber Partner Community Delegated Admin&quot;  &amp;&amp;  ISCHANGED( Name )</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>The Account Name cannot be changed by the Community Delegated Admin. Please contact your Account Manager.</errorMessage>
    </validationRules>
</CustomObject>